# ReHLine-python

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  DESCRIPTION  LICENSE  NAMESPACE  README.md  SECURITY.md  build.py  pyproject.toml  rehline.Rproj  requirements.txt  setup.py  setup_py.txt  to-do.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  wheels.yml
.ipynb_checkpoints/: FairSVM-checkpoint.ipynb  QR-checkpoint.ipynb  SVM-checkpoint.ipynb
R/: RcppExports.R  elastic_huber.R  elastic_qr.R  elasticqr.R  l3solver.R  rehline.R  svm.R  zzz.R
benchmarks/: README.md  __init__.py  large_config.json  mini_config.json  mini_gridsearch.py
benchmarks/results/: rehline-0.1.3.dev33-g8af87e306.md
doc/: requirements.txt
doc/_templates/autoapi/: index.rst
doc/source/: _examples_toctree.rst  api.rst  benchmark.rst  clean_notebooks.py  conf.py  example.rst  getting_started.rst  index.rst  installation.rst  requirements.txt  tutorials.rst
doc/source/_templates/autoapi/: index.rst
doc/source/autoapi/: index.rst
doc/source/benchmark/: benchmark_FairSVM.html  benchmark_sSVM.html
doc/source/examples/: Adaptive_ElasticNet.ipynb  CQR.ipynb  CustomQR.ipynb  ElasticNet.ipynb  FairSVM.ipynb  FairSVM_new.ipynb  GridSearchCV_SVM_losses.ipynb  GridSearchCV_reg_losses.ipynb  Huber.ipynb  Huber_new.ipynb  MAE.ipynb  MAE_new.ipynb  MF.ipynb  MSE.ipynb  MSE_new.ipynb  MonotonicSVM.ipynb  Multiclass_Classification.ipynb  NMF.ipynb  Path_solution.ipynb  QR.ipynb  QR_eps.ipynb  QR_eps_new.ipynb  QR_new.ipynb  RankRegression.ipynb  ReHLine_Rank.ipynb  ReHLine_SVM_FairSVM.ipynb  SVM.ipynb  SVM_new.ipynb  SVR.ipynb  SVR_new.ipynb  Sklearn_Mixin.ipynb  Smooth_SVM.ipynb  Smooth_SVM_new.ipynb  Squared_SVM.ipynb  Squared_SVM_new.ipynb  Warm_start.ipynb
doc/source/tutorials/: ReHLine_ERM.rst  ReHLine_MF.rst  ReHLine_manual.rst  ReHLine_sklearn.rst  constraint.rst  loss.rst  warmstart.rst
examples/: ReHLine_QR.ipynb
man/: elastic_huber.Rd  elastic_qr.Rd  rehline.Rd  svm.Rd
python/: .gitignore  __init__.py  _l3solver.py  _rehline.py  base.py  benchmark.py  l3solver.cpp  py_test.py  qp_solver.py  rehloss.py  setup.py  test_svm.py
python/Cython/: L3solver.cpp  L3solver.pyx  run_tests.py
python/benchmark/: benchmark_base.py  plot.py  tab.py
python/benchmark/QR/: funs.py  test.py  test_l2.py
python/benchmark/SVM/: test_svm.py
python/benchmark/TV/: test.py
python/benchmark/benchmark_FairSVM/: README.md  README.rst  objective.py
python/benchmark/benchmark_Huber/: README.md  objective.py  test.py
python/benchmark/benchmark_QR/: README.md  objective.py
python/benchmark/benchmark_SVM/: README.md  objective.py
python/benchmark/benchmark_sSVM/: README.md  objective.py
python/benchmark/fairSVM/: rate.py  test.py  test_FairSVM.py
python/src/: l3solver.cpp  l3solver_old.cpp  rehline.cpp
python/test/: _test_loss.py
rehline/: __init__.py  _base.py  _class.py  _data.py  _internal.pyi  _loss.py  _mf_class.py  _path_sol.py  _rehline.py  _sklearn_mixin.py  main.py  rehloss.py
rehline/datasets/: ml-100k.csv
rehline_en/: pyvenv.cfg
src/: CythonExports.h  RcppExports.cpp  l3solver.cpp  rehline.cpp  rehline.h  rehline_old.cpp  rehline_quad.h
test/: README.md  obj.py  qp_solver.py  test.py  test_huber.R  test_main.py  test_qr.R  test_qsvm.R  test_qsvm.py  test_svm.R  test_svm.py  test_unconstrain.py
test/dataset/sim/: data_gen.py  exp2.npz  exp_qsvm.npz  exp_svm.npz
test/dataset/svm/: U.csv  breast_cancer.py  sol.csv  svm.npz  v.csv
test/test_fairSVM/: README.md  fairSVM_slow.npz  fairSVM_suboptimal.npz
test/v1/: test_main.py  test_svm.R  test_svm.py  test_unconstrain.py
tests/: _test_cqr.py  _test_elastic_net.py  _test_fairsvm.py  _test_mf.py  _test_monotonic.py  _test_multiclass.py  _test_path_sol.py  _test_po.py  _test_rehline_ext.py  _test_sklearn_mixin.py  _test_svm.py  _test_svr.py  _test_warmstart.py  test_bugfixes.py  test_cqr.py  test_elastic_net.py  test_fairsvm.py  test_mf.py  test_mini_benchmark.py  test_monotonic.py  test_multiclass.py  test_path_sol.py  test_sklearn_elasticnet.py  test_sklearn_mixin.py  test_svm.py  test_svr.py  test_warmstart.py
(+2230 files in other folders)
