[project]
name = "rehline"
version = "0.1.2"
description = "Regularized Composite ReLU-ReHU Loss Minimization with Linear Computation and Linear Convergence"
authors = [
  {name = "Ben Dai", email = "bendai@cuhk.edu.hk"},
  {name = "Yixuan Qiu", email = "yixuanq@gmail.com"}
]
maintainers = [
  {name = "Ben Dai", email = "bendai@cuhk.edu.hk"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "numpy >= 1.23.5",
    "scipy >= 1.11.4",
    "scikit-learn >= 1.2.2"
]

[pyproject.urls]
homepage = "https://rehline.github.io/"
repository = "https://github.com/softmin/ReHLine-python"
documentation = "https://rehline-python.readthedocs.io/en/latest/index.html"

[tool.setuptools]
py-modules = ["build"]

[tool.cibuildwheel]
# Only build on CPython
build = "cp*"

[project.optional-dependencies]
test = ["pytest >= 7.0", "pandas >= 1.5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["requests ~= 2.31.0", "pybind11 ~= 3.0.0", "setuptools >= 80.0.0", "wheel >= 0.42.0"]
build-backend = "setuptools.build_meta"
