[project]
name = "rehline"
dynamic = ["version"]
description = "Regularized Composite ReLU-ReHU Loss Minimization with Linear Computation and Linear Convergence"
authors = [
  {name = "Ben Dai", email = "bendai@cuhk.edu.hk"},
  {name = "Yixuan Qiu", email = "yixuanq@gmail.com"}
]
maintainers = [
  {name = "Ben Dai", email = "bendai@cuhk.edu.hk"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "numpy >= 1.23.5",
    "scipy >= 1.11.4",
    "scikit-learn >= 1.2.2"
]

[tool.setuptools_scm]
tag_prefix = "v"

[pyproject.urls]
homepage = "https://rehline.github.io/"
repository = "https://github.com/softmin/ReHLine-python"
documentation = "https://rehline-python.readthedocs.io/en/latest/index.html"

[tool.setuptools]
py-modules = ["build"]

[tool.cibuildwheel]
# Only build on CPython
build = "cp*"

[project.optional-dependencies]
test = ["pytest >= 7.0", "pandas >= 1.5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["requests ~= 2.31.0", "pybind11 ~= 3.0.0", "setuptools >= 80.0.0", "wheel >= 0.42.0", "setuptools-scm >= 8.0"]
build-backend = "setuptools.build_meta"

# --- Ruff (linter + formatter) ---
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear (includes B006 mutable defaults)
    "UP",   # pyupgrade
]
ignore = [
    "E501",   # line too long (let formatter handle it)
    "B905",   # zip without strict= (Python 3.10+)
    "F401",   # unused imports (re-export from __init__.py)
]

[tool.ruff.lint.isort]
known-first-party = ["rehline"]

# --- Codespell (typo checker) ---
[tool.codespell]
skip = "*.so,*.cpp,*.h,*.zip,*.html,*.ipynb,eigen-*,build,dist,.git,.ipynb_checkpoints"
ignore-words-list = "nd,hist,bu,bi,ans"
